--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title: BY Blog
-SEOTitle: 我的博客 | BY Blog
+title: WZP Blog
+SEOTitle: 我的博客 | WZP Blog
 header-img: img/post-bg-desk.jpg
 email: weizhaopeng@gmail.com
-description: "Every failure is leading towards success."
+description: "学海无涯 回头还是海"
 keyword: "study，analog circuit，micro electronics"
 url: "http://zhaopengwei1.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
@@ -11,7 +11,7 @@ github_repo: "https://github.com/zhaopengwei1/zhaopengwei1.github.io.git" # you 
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "学海无涯 回头还是海"
+sidebar-about-description: "just have a look^^"
 sidebar-avatar: /img/me.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
